# curvz

./: .gitignore  CMakeLists.txt  README.md  build.sh  widget_names_sync
docs/: manual-outline-v2.md
include/: AnimatingSvgParser.hpp  AppPreferences.hpp  AppScriptable.hpp  Application.hpp  BlendDialog.hpp  BlendPopover.hpp  Canvas.hpp  Canvas_internal.hpp  ClipboardViewWindow.hpp  ColorPickerPopover.hpp  ColorPickerRecents.hpp  CommandHistory.hpp  ContextBar.hpp  CoordConvert.hpp  CoordSpace.hpp  CurvzColorPicker.hpp  CurvzDocument.hpp  CurvzEntry.hpp  CurvzLog.hpp  CurvzProject.hpp  CurvzSpinButton.hpp  CurvzSwitch.hpp  DepotWindow.hpp  DocTabBar.hpp  DocUnits.hpp  DocumentGallery.hpp  ExportDialog.hpp  ExportDocsDialog.hpp  GResourceExporter.hpp  GlyphObject.hpp  GradientDialog.hpp  HelpWindow.hpp  ImageInfo.hpp  ImageInfoDialog.hpp  Layer.hpp  LayersPanel.hpp  LibraryPanel.hpp  MacroEditorWindow.hpp  MacroManagerWindow.hpp  MacroSystem.hpp  (+46 more)
include/animation/: MotionPump.hpp  SvgPerformer.hpp  WelcomeAnimator.hpp
include/color/: Color.hpp  ColorRegion.hpp  FillStyleInterop.hpp  GplFormat.hpp  Gradient.hpp  Paint.hpp  Palette.hpp  PaletteIO.hpp  Swatch.hpp  SwatchLibrary.hpp
include/math/: BezierPath.hpp  BooleanOps.hpp  BooleanOpsClipper.hpp  BooleanOpsRefit.hpp  CornerTreatment.hpp  CubicSegment.hpp  PathNormalize.hpp  PathOffset.hpp  PathReduce.hpp  PathSimplify.hpp  TextFlowGeometry.hpp  Vec2.hpp
include/scripting/: Action.hpp  AppScriptable.hpp  ExportScriptable.hpp  GuidesScriptable.hpp  InspectorScriptable.hpp  LayersScriptable.hpp  ObjectsScriptable.hpp  PalettesScriptable.hpp  ProjScriptable.hpp  RunContext.hpp  ScriptListener.hpp  ScriptValue.hpp  Scriptable.hpp  ScriptableRegistry.hpp  ScriptableWidget.hpp  ScripterWindow.hpp  StylesPanelScriptable.hpp  StylesScriptable.hpp  SwatchesScriptable.hpp  ThemesScriptable.hpp  WidgetNameResolver.hpp  path_is_safe.hpp  proxy_helpers.hpp
include/style/: Style.hpp  StyleIO.hpp  StyleInterop.hpp  StyleLibrary.hpp
include/theme/: Theme.hpp  ThemeIO.hpp  ThemeLibrary.hpp
include/tools/: PenTool.hpp
include/widgets/: Button.hpp  CheckButton.hpp  DropDown.hpp  Entry.hpp  RefPointGrid.hpp  RefPointPicker.hpp  Scale.hpp  SpinButton.hpp  ToggleButton.hpp
packaging/flatpak/: README.md  io.github.curvz.Curvz.yaml
resources/: README.md  resources.xml
resources/data/: seeds.json
resources/freedesktop/: io.github.curvz.Curvz.desktop.in  io.github.curvz.Curvz.metainfo.xml  io.github.curvz.Curvz.mime.xml
resources/help/: 1-1-welcome.md  1-2-about-curvz.md  1-3-workspace-tour.md  1-4-how-curvz-thinks-about-size.md  10-1-view-options.md  10-2-units.md  11-1-macros.md  11-2-keyboard-shortcuts.md  11-3-troubleshooting.md  12-1-workflow-strategies.md  2-1-projects-and-documents.md  2-2-templates.md  2-3-import-export.md  3-1-header-and-tabs.md  3-1-tools-overview.md  3-2-menus.md  3-3-toolbar.md  3-4-context-bar.md  3-5-status-bar.md  3-6-canvas-rulers-corner.md  3-7-color-picker.md  4-1-tools-overview.md  4-2-1-selection-tool.md  4-2-2-node-tool.md  4-3-pen.md  4-4-1-rectangle.md  4-4-2-ellipse.md  4-4-3-line.md  4-4-4-polygon.md  4-4-5-spiral.md  4-5-1-text.md  4-5-2-text-on-path.md  4-6-1-eyedropper.md  4-6-2-zoom.md  4-6-3-measure.md  4-6-3-ruler.md  4-7-reference-points.md  4-8-corner.md  5-1-inspector-overview.md  5-2-1-motif.md  (+46 more)
resources/palettes/: crayon.gpl  greyscale.gpl  pastel.gpl  standard.gpl  vivid.gpl  web.gpl  zorn.gpl
resources/scripts/: README.md
scriptproto/: CMakeLists.txt  README.md  build.sh
scriptproto/include/: ScriptListener.hpp  ScriptValue.hpp  Scriptable.hpp  ScriptableRegistry.hpp  ScriptableWidget.hpp  ScripterWindow.hpp
scriptproto/include/widgets/: Button.hpp  CheckButton.hpp  DropDown.hpp  Entry.hpp  Scale.hpp  SpinButton.hpp  ToggleButton.hpp
scriptproto/scripts/: 01_toggle_click.curvzs  02_entry_text.curvzs  03_spin_value.curvzs  04_scale_value.curvzs  05_dropdown_select.curvzs  06_bidirectional.curvzs  07_errors.curvzs  08_list.curvzs
scriptproto/src/: ScriptListener.cpp  ScriptableRegistry.cpp  ScripterWindow.cpp  lifetime_test.cpp  main.cpp
scriptproto/src/widgets/: Button.cpp  CheckButton.cpp  DropDown.cpp  Entry.cpp  Scale.cpp  SpinButton.cpp  ToggleButton.cpp
src/: AnimatingSvgParser.cpp  AppPreferences.cpp  Application.cpp  BlendDialog.cpp  BlendPopover.cpp  Canvas.cpp  Canvas_draw.cpp  Canvas_input.cpp  Canvas_ops.cpp  ClipboardViewWindow.cpp  ColorPickerPopover.cpp  ColorPickerRecents.cpp  CommandHistory.cpp  ContextBar (1).cpp  ContextBar.cpp  CurvzColorPicker.cpp  CurvzDocument.cpp  CurvzLog.cpp  CurvzProject.cpp  CurvzSpinButton.cpp  CurvzSwitch.cpp  DepotWindow.cpp  DocTabBar.cpp  DocUnits.cpp  DocumentGallery.cpp  ExportDialog.cpp  ExportDocsDialog.cpp  GResourceExporter.cpp  GlyphObject.cpp  GradientDialog.cpp  HelpWindow.cpp  IcoExporter.cpp  ImageInfoDialog.cpp  Layer.cpp  LayersPanel.cpp  LibraryPanel.cpp  MacroEditorWindow.cpp  MacroManagerWindow.cpp  MacroSystem.cpp  MainWindow.cpp  (+48 more)
src/animation/: MotionPump.cpp  SvgPerformer.cpp  WelcomeAnimator.cpp
src/color/: Color.cpp  ColorRegion.cpp  FillStyleInterop.cpp  GplFormat.cpp  Paint.cpp  PaletteIO.cpp  SwatchLibrary.cpp
src/math/: BezierPath.cpp  BooleanOps.cpp  BooleanOpsClipper.cpp  BooleanOpsRefit.cpp  CornerTreatment.cpp  CubicSegment.cpp  HitTest.cpp  PathNormalize.cpp  PathOffset.cpp  PathReduce.cpp  PathSimplify.cpp  TextFlowGeometry.cpp  Vec2.cpp
src/scripting/: Action.cpp  AppScriptable.cpp  ExportScriptable.cpp  GuidesScriptable.cpp  InspectorScriptable.cpp  LayersScriptable.cpp  ObjectsScriptable.cpp  PalettesScriptable.cpp  ProjScriptable.cpp  ScriptListener.cpp  ScriptableRegistry.cpp  ScripterWindow.cpp  StylesPanelScriptable.cpp  StylesScriptable.cpp  SwatchesScriptable.cpp  ThemesScriptable.cpp  WidgetNameResolver.cpp  path_is_safe.cpp
src/style/: StyleIO.cpp  StyleInterop.cpp  StyleLibrary.cpp
src/theme/: ThemeIO.cpp  ThemeLibrary.cpp
src/tools/: EllipseTool.cpp  EyedropperTool.cpp  (+6 more)
tests/: test_boolean_ops_refit  test_boolean_ops_refit.cpp  test_svg_id_codec.cpp
(+103 files in other folders)
